--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The Burger Builder Restaurant" />
+    <meta name="description" content="My Burger" />
     <link rel="apple-touch-icon" href="/src/assets/apple-touch-icon.png" />
-    <link rel="android-chrome" href="/src/assets/android-chrome-512x512.png" sizes="512x512" />
+    <link
+      rel="android-chrome"
+      href="/src/assets/android-chrome-512x512.png"
+      sizes="512x512"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Burger Builder</title>
+    <title>My Burger</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
